[package]
name = "rtt-logger"
version = "0.2.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An rtt-target logger implementation for Cortex-M embedded platforms"


[dependencies]
log = "0.4.11"
rtt-target = {version = "0.3.1", features = ["cortex-m"] }
